javascript.info just do it

--- a/animation/js-animation/index.html
+++ b/animation/js-animation/index.html
@@ -6,8 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
-      .train {
+      #train {
         position: relative;
+        cursor: pointer;
+      }
+      #field {
+        height: 200px;
+        border-bottom: 3px black groove;
+        position: relative;
+      }
+
+      #ball {
+        position: absolute;
         cursor: pointer;
       }
     </style>
@@ -15,6 +25,66 @@
   <body>
     <img id="train" src="https://js.cx/clipart/train.gif" />
     <div id="text"></div>
+    <div id="field">
+      <img
+        src="https://js.cx/clipart/ball.svg"
+        width="40"
+        height="40"
+        id="ball"
+      />
+    </div>
+    <h1 id="lily">This is Lily</h1>
+
+    <div id="javascript-info">
+      <p>
+        1Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam nihil
+        illum id nemo cum exercitationem temporibus, doloribus perspiciatis in
+        necessitatibus minima magnam dicta dolore ipsum totam, tempora voluptas
+        iure veniam?
+      </p>
+      <p>
+        2Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam nihil
+        illum id nemo cum exercitationem temporibus, doloribus perspiciatis in
+        necessitatibus minima magnam dicta dolore ipsum totam, tempora voluptas
+        iure veniam?
+      </p>
+      <p>
+        3Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam nihil
+        illum id nemo cum exercitationem temporibus, doloribus perspiciatis in
+        necessitatibus minima magnam dicta dolore ipsum totam, tempora voluptas
+        iure veniam?
+      </p>
+      <p>
+        4Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam nihil
+        illum id nemo cum exercitationem temporibus, doloribus perspiciatis in
+        necessitatibus minima magnam dicta dolore ipsum totam, tempora voluptas
+        iure veniam?
+      </p>
+      <p>
+        5Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam nihil
+        illum id nemo cum exercitationem temporibus, doloribus perspiciatis in
+        necessitatibus minima magnam dicta dolore ipsum totam, tempora voluptas
+        iure veniam?
+      </p>
+      <p>
+        6Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam nihil
+        illum id nemo cum exercitationem temporibus, doloribus perspiciatis in
+        necessitatibus minima magnam dicta dolore ipsum totam, tempora voluptas
+        iure veniam?
+      </p>
+      <p>
+        7Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam nihil
+        illum id nemo cum exercitationem temporibus, doloribus perspiciatis in
+        necessitatibus minima magnam dicta dolore ipsum totam, tempora voluptas
+        iure veniam?
+      </p>
+      <p>
+        8Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam nihil
+        illum id nemo cum exercitationem temporibus, doloribus perspiciatis in
+        necessitatibus minima magnam dicta dolore ipsum totam, tempora voluptas
+        iure veniam?
+      </p>
+    </div>
 
     <script src="animation.js"></script>
   </body>
