--- a/animation/js-animation/index.html
+++ b/animation/js-animation/index.html
@@ -6,19 +6,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
+      body {
+        /* padding-top: 50px; */
+      }
       #train {
         position: relative;
         cursor: pointer;
       }
       #field {
         height: 200px;
-        border-bottom: 3px black groove;
+        border-bottom: 3px rgb(255, 7, 7) dashed;
         position: relative;
       }
 
       #ball {
         position: absolute;
         cursor: pointer;
+      }
+      #javascript-info {
+        /* height: 400px;
+        width: 350px;
+        overflow: auto; */
+      }
+      /* Start CSS progess bar */
+      #progress-container {
+        position: fixed;
+        width: 100%;
+        height: 4px;
+        left: 0;
+        top: 0;
+        z-index: 1000;
+        background: transparent;
+        transition: all ease-out 0.2s;
+      }
+
+      #progress-container.ready {
+        transform: translateY(-3px);
+      }
+
+      #progress-bar {
+        display: block;
+        width: 0;
+        height: 3px;
+        background: deeppink;
       }
     </style>
   </head>
@@ -87,5 +117,6 @@
     </div>
 
     <script src="animation.js"></script>
+    <script src="progress.js"></script>
   </body>
 </html>
