very first 1 project in challenge

--- a/animation/js-animation/index.html
+++ b/animation/js-animation/index.html
@@ -53,7 +53,7 @@
     </style>
   </head>
   <body>
-    <img id="train" src="https://js.cx/clipart/train.gif" />
+    <!-- <img id="train" src="https://js.cx/clipart/train.gif" />
     <div id="text"></div>
     <div id="field">
       <img
@@ -63,9 +63,9 @@
         id="ball"
       />
     </div>
-    <h1 id="lily">This is Lily</h1>
+    <h1 id="lily">This is Lily</h1> -->
 
-    <div id="javascript-info">
+    <div id="content">
       <p>
         1Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam nihil
         illum id nemo cum exercitationem temporibus, doloribus perspiciatis in
@@ -98,6 +98,90 @@
       </p>
       <p>
         6Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam nihil
+        illum id nemo cum exercitationem temporibus, doloribus perspiciatis in
+        necessitatibus minima magnam dicta dolore ipsum totam, tempora voluptas
+        iure veniam?
+      </p>
+      <p>
+        7Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam nihil
+        illum id nemo cum exercitationem temporibus, doloribus perspiciatis in
+        necessitatibus minima magnam dicta dolore ipsum totam, tempora voluptas
+        iure veniam?
+      </p>
+      <p>
+        8Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam nihil
+        illum id nemo cum exercitationem temporibus, doloribus perspiciatis in
+        necessitatibus minima magnam dicta dolore ipsum totam, tempora voluptas
+        iure veniam?
+      </p>
+      <p>
+        7Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam nihil
+        illum id nemo cum exercitationem temporibus, doloribus perspiciatis in
+        necessitatibus minima magnam dicta dolore ipsum totam, tempora voluptas
+        iure veniam?
+      </p>
+      <p>
+        8Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam nihil
+        illum id nemo cum exercitationem temporibus, doloribus perspiciatis in
+        necessitatibus minima magnam dicta dolore ipsum totam, tempora voluptas
+        iure veniam?
+      </p>
+      <p>
+        7Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam nihil
+        illum id nemo cum exercitationem temporibus, doloribus perspiciatis in
+        necessitatibus minima magnam dicta dolore ipsum totam, tempora voluptas
+        iure veniam?
+      </p>
+      <p>
+        8Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam nihil
+        illum id nemo cum exercitationem temporibus, doloribus perspiciatis in
+        necessitatibus minima magnam dicta dolore ipsum totam, tempora voluptas
+        iure veniam?
+      </p>
+      <p>
+        7Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam nihil
+        illum id nemo cum exercitationem temporibus, doloribus perspiciatis in
+        necessitatibus minima magnam dicta dolore ipsum totam, tempora voluptas
+        iure veniam?
+      </p>
+      <p>
+        8Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam nihil
+        illum id nemo cum exercitationem temporibus, doloribus perspiciatis in
+        necessitatibus minima magnam dicta dolore ipsum totam, tempora voluptas
+        iure veniam?
+      </p>
+      <p>
+        7Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam nihil
+        illum id nemo cum exercitationem temporibus, doloribus perspiciatis in
+        necessitatibus minima magnam dicta dolore ipsum totam, tempora voluptas
+        iure veniam?
+      </p>
+      <p>
+        8Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam nihil
+        illum id nemo cum exercitationem temporibus, doloribus perspiciatis in
+        necessitatibus minima magnam dicta dolore ipsum totam, tempora voluptas
+        iure veniam?
+      </p>
+      <p>
+        7Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam nihil
+        illum id nemo cum exercitationem temporibus, doloribus perspiciatis in
+        necessitatibus minima magnam dicta dolore ipsum totam, tempora voluptas
+        iure veniam?
+      </p>
+      <p>
+        8Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam nihil
+        illum id nemo cum exercitationem temporibus, doloribus perspiciatis in
+        necessitatibus minima magnam dicta dolore ipsum totam, tempora voluptas
+        iure veniam?
+      </p>
+      <p>
+        7Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam nihil
+        illum id nemo cum exercitationem temporibus, doloribus perspiciatis in
+        necessitatibus minima magnam dicta dolore ipsum totam, tempora voluptas
+        iure veniam?
+      </p>
+      <p>
+        8Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam nihil
         illum id nemo cum exercitationem temporibus, doloribus perspiciatis in
         necessitatibus minima magnam dicta dolore ipsum totam, tempora voluptas
         iure veniam?
